2008-11-08  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.26.modules, modulesets/gnome-suites-2.26.modules:
	reviewed and updated dependencies for most modules of the official
	suites.

2008-11-08  Olav Vitters  <olav@bkor.dhs.org>

	* jhbuild/defaults.jhbuildrc: Build GNOME 2.26 by default.

2008-11-07  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: drop libgnome/ui from cheese
	and bug-buddy; also drop gnome-vfs from cheese.  (closes: #559610,
	patch by Theppitak Karoonboonyanan)

2008-11-06  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* modulesets/gnome-suites-2.24.modules: Use gnome-2-24
	branch for seahorse-plugins.

2008-11-06  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-external-deps-2.26.modules: add clutter here. Was
	missing?

2008-11-06  John Carr  <john.carr@unrouted.co.uk>

	* modulesets/gnome-suites-2.26.modules:
	* modulesets/gnome-suites-2.24.modules:
	Make seahorse-plugins definitions like the gnomemm stuff.
	This is tidier and works nicer with git-mirror.g.o.

2008-11-06  John Carr  <john.carr@unrouted.co.uk>

	* jhbuild/versioncontrol/git.py:
	Fix rebasing when on a branch. Fix update when trying to
	checkout a new branch.

2008-11-06  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* modulesets/gnome-2.26.modules: Use new vala release: 0.5.1.

2008-11-05  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: removed gnome-vfs dependency of
	totem-pl-parser.

2008-11-05  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.24.modules: gnome-keyring branched for
	2.24.

2008-11-05  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: removed libgnome/libgnomeui
	dependencies of seahorse; added dbus-glib to both seahorse and
	seahorse-plugins.

2008-11-05  Frederic Peters  <fpeters@0d.be>

	* jhbuild/frontends/terminal.py: do not use Exception.message as it has
	been deprecated in Python 2.6.

2008-11-05  Frederic Peters  <fpeters@0d.be>
