@@ -1,5 +1,9 @@
 2008-11-08  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/moduleset.py: clearer error message on invalid dependency.
+
+2008-11-08  Frederic Peters  <fpeters@0d.be>
+
 	* modulesets/gnome-2.26.modules, modulesets/gnome-suites-2.26.modules:
 	reviewed and updated dependencies for most modules of the official
 	suites.
